viết thêm api import export